--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@reduxjs/toolkit": "^1.8.4",
     "axios": "^0.27.2",
     "framer-motion": "^7.2.0",
+    "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-slick": "^0.29.0",
+    "save": "^2.5.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
